Кнопки входа в кабинет добавление <а>

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -150,15 +150,15 @@
                                     <p><span>Предмет:</span>Русский язык</p>
                                 </div>
                                 <div class="card-lk_button room-type">
-                                    <button class="pruffeme" type="submit">
+                                    <a class="pruffeme" type="submit">
                                         В комнату
-                                    </button>
-                                    <button class="zoom" type="submit">
+                                    </a>
+                                    <a class="zoom" type="submit">
                                         Zoom
-                                    </button>
-                                  <button class="skype" type="submit">
+                                    </a>
+                                  <a class="skype" type="submit">
                                         Skype
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </li>
