disabled  для кнопки родителя

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -170,8 +170,11 @@
                                     <p><span>Преподаватель:</span>Тестовый логопед</p>
                                     <p><span>Предмет:</span>Русский язык</p>
                                 </div>
-                                <div class="card-lk_button">
+                                <div class="card-lk_button room-type">
                                     <button type="submit">
+                                        На занятие
+                                    </button>
+                                    <button type="submit" disabled>
                                         На занятие
                                     </button>
                                 </div>
