направления-логопедия - Подготовка к школе2

--- a/шаблон — направления-логопедия - Подготовка к школе.html
+++ b/шаблон — направления-логопедия - Подготовка к школе.html
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 206-1.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -342,7 +342,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 207.png" alt="">
                         </div>
                         <div class="efficiency">
                             <ul>
@@ -399,7 +399,7 @@
                         <p class="napravlenia_textblock uk-text-center">Мотивация</p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 209.png" alt="">
                          
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log  uk-text-default">
@@ -408,7 +408,7 @@
                         <p class="napravlenia_textblock uk-text-center">Любознательность</p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 211.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center  napravlenia_textblock_3  log  uk-text-default">
                         <p class="efficiency-blok-img"><span class="color13"></span></p>
@@ -416,7 +416,7 @@
                         <p class="napravlenia_textblock uk-text-center">Уверенность в себе</p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 210.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log   uk-text-default">
                         <p class="efficiency-blok-img"><span class="color10"></span></p>
@@ -425,7 +425,7 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 213.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3 log   uk-text-default">
                         <p class="efficiency-blok-img"><span class="color13"></span></p>
@@ -434,7 +434,7 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 214.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log   uk-text-default">
                         <p class="efficiency-blok-img"><span class="color7"></span></p>
@@ -443,7 +443,7 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 212.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3  log   uk-text-default">
                         <p class="efficiency-blok-img"><span class="color13"></span></p>
@@ -452,16 +452,16 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 216.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3  log  uk-text-default">
                         <p class="efficiency-blok-img"><span class="color7"></span></p>
                         <br>
-                        <p class="napravlenia_textblock uk-text-center"> Разбор логических головоломок, тренировка гибкости ума
+                        <p class="napravlenia_textblock uk-text-center">Разбор логических головоломок, тренировка гибкости ума
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 217.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log  uk-text-default">
                         <p class="efficiency-blok-img"><span class="color10"></span></p>
@@ -470,7 +470,7 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 208.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log  uk-text-default">
                         <p class="efficiency-blok-img"><span class="color10"></span></p>
@@ -479,7 +479,7 @@
                         </p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 218.png" alt="">
                     </div>
                     <div class="uk-flex-column uk-text-center napravlenia_textblock_3   log  uk-text-default">
                         <p class="efficiency-blok-img"><span class="color13"></span></p>
@@ -487,7 +487,7 @@
                         <p class="napravlenia_textblock uk-text-center">Знакомство с понятием домашней работы, получение навыка самоорганизованности</p>
                         <img class="uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                        src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                        src="https://cdn.nyutonika.ru/images/pages-napr/Frame 215.png" alt="">
                     </div>
                 </div>
             </section>
