дошкольникам - английский-язык2

--- a/шаблон — направления-дошкольникам - английский-язык.html
+++ b/шаблон — направления-дошкольникам - английский-язык.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 219.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -354,7 +354,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 221.png" alt="">
                         </div>
                     </div>
                     <p class="uk-text-center napravlenia_nachscola_text textcolor17  uk-padding-large"
@@ -377,7 +377,7 @@
 
 
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 222.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
 
                     </div>
@@ -419,7 +419,7 @@
 
                     </div>
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 223.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
 
                     </div>
@@ -428,7 +428,7 @@
 
 
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 224.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
 
                     </div>
