--- a/шаблон — направления-начальная школа - литературное-чтение.html
+++ b/шаблон — направления-начальная школа - литературное-чтение.html
@@ -261,7 +261,7 @@
         </div>
         <div class="container">
             <div class="container-item">
-                <h3>Хотите узнать о русском языке больше?</h3>
+                <h3>Хотите узнать  больше?</h3>
                 <h4>Оставьте заявку на бесплатный урок</h4>
                 <form action="" class="uk-grid-small banner-trend-form napravlenia_nach" uk-grid>
                     <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
