--- a/шаблон — направления-начальная школа - литературное-чтение.html
+++ b/шаблон — направления-начальная школа - литературное-чтение.html
@@ -314,7 +314,7 @@
                 </section>
             </div>
         </div>
-        <div class="problems  color19 diagnostika-malisham uk-margin-xlarge-bottom">
+        <div class="problems  color19 diagnostika-malisham">
             <div class="container">
 
                 <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
@@ -327,18 +327,37 @@
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Сложно переоценить роль книги в
                         развитии ребенка.
                     </p>
-                    <p class="uk-text-center uk-scrollspy-inview"
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        Объем и разнообразие прочитанной литературы напрямую влияет на развитие словарного запаса
-                        школьника, на его нравственный и духовный рост, способность грамотно и красиво выражать свои
-                        мысли.
-                    </p>
-                    <p class="uk-text-center uk-scrollspy-inview"
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        Правильное понимание чувств персонажей, причин и следствий событий, умение анализировать,
-                        выделять ключевую мысль и красноречиво высказывать свое мнение - вот, чему учатся дети, в
-                        процессе чтения художественной литературы.
-                    </p>
+                    <section class="uk-flex-between one-section" uk-grid>
+                        <div class="uk-width-expand@m">
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 229.png" alt=""
+                                uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                        </div>
+                        <div class="uk-width-1-2@m uk-flex uk-flex-middle">
+                            <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                                <div class=" uk-padding napravlenia_textblock ">
+                                    Объем и разнообразие прочитанной литературы напрямую влияет на развитие словарного запаса
+                                    школьника, на его нравственный и духовный рост, способность грамотно и красиво выражать свои
+                                    мысли.
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="uk-flex-between one-section" uk-grid>
+                        <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
+                            <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                                 
+                                <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                                    Правильное понимание чувств персонажей, причин и следствий событий, умение анализировать,
+                                    выделять ключевую мысль и красноречиво высказывать свое мнение - вот, чему учатся дети, в
+                                    процессе чтения художественной литературы.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-width-expand@m   uk-margin">
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 230.png" alt=""
+                                uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                        </div>
+                    </section>
                 </section>
             </div>
         </div>
@@ -347,6 +366,7 @@
 
         <div class="problems problems_malisham color19 ">
             <div class="container">
+                
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Чему уделяем особое внимание?
@@ -397,7 +417,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 227.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -449,7 +469,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 228.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
