--- a/шаблон — направления-средняя-школа-физика.html
+++ b/шаблон — направления-средняя-школа-физика.html
@@ -716,20 +716,21 @@
 
                     <h4 class="uk-text-center title-trend-block"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Поможем каждому понять и полюбить
-                        геометрию!
+                        физику!
 
                     </h4>
                     <div class="text-trend-block">
                     </div>
                     <div class="form-trend-list">
-                        <div><span class="color1"></span>разбираем каждую формулу так легко,<br> что заучивать не
-                            придется
-                        </div>
-                        <div><span class="color2"></span>идем в темпе со школьной программой,<br> в процессе - опережаем
+                        <div><span class="color1"></span>всегда на связи с родителями,<br>делимся успехами ученика с
+                            первых занятий
 
                         </div>
-                        <div><span class="color3"></span>индивидуальный подход к каждому ученику,<br> заинтересуем
-                            геометрией любого!
+                        <div><span class="color2"></span>простыми словами о сложных понятиях,<br>материал легко
+                            усваивается
+
+                        </div>
+                        <div><span class="color3"></span>улучшение успеваемости
 
                         </div>
 
