--- a/шаблон — направления-дошкольникам - психолог.html
+++ b/шаблон — направления-дошкольникам - психолог.html
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 240.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -301,10 +301,12 @@
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
 
                         <div class="napravlenia_nachscola_text textcolor17 uk-text-center">
+                            <p class="efficiency-blok-img"><span class="color7"></span></p>
                             В пятилетнем возрасте ребенок уже имеет ярко выраженную индивидуальность: постоянная
                             перемена эмоций, капризы, ссоры со сверстниками и нежелание слушать маму с папой. А бывает и
                             так, что жизнерадостный малыш вдруг становится тихим и застенчивым.
-                            <br>
+                            <br> <br>
+                            <p class="efficiency-blok-img"><span class="color7"></span></p>
                             Резкие перемены в поведении ребенка приводят родителей в замешательство. Как быть? Как
                             правильно реагировать на «хочу», «не буду»? Стоит ли наказывать ребенка, в чем-то
                             ограничивать? А ведь совсем скоро в школу!
@@ -331,36 +333,25 @@
                 Психологи в школе Ньютоника знают, <br> что делать!</h3>
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding  uk-grid" uk-grid>
-
-
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 241.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
-
                 </div>
-
-
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
-
-
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                         <div class="uk-padding   napravlenia_textblock_one">Дошкольники</div>
                         <div class="h1-banner-text uk-padding napravlenia_textblock ">
                             Помогаем разобраться в себе, справиться с неуверенностью и страхами, адаптироваться к школе
                             и научиться вести себя в коллективе.
                         </div>
-
                     </div>
-
                 </div>
-
             </section>
 
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding  efficiency-reverse uk-grid" uk-grid>
 
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle ">
-
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                         <div class="uk-padding   napravlenia_textblock_one">Родители</div>
                         <div class="h1-banner-text uk-padding napravlenia_textblock ">
@@ -368,16 +359,12 @@
                             с капризами и страхами.
                         </div>
                     </div>
-
                 </div>
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 242.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
-
                 </div>
             </section>
-
-
         </div>
 
 
@@ -399,6 +386,11 @@
                         Кто-то уже в 6 лет психологически готов к новому этапу своей жизни, а для
                         кого-то поступление в первый класс в 8 лет может вызывать большие сложности.
                     </p>
+                    <div class="uk-flex-center uk-flex problems-img uk-flex-last@m uk-grid-margin uk-first-column">
+                        <img class="uk-scrollspy-inview "
+                            uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                            src="https://cdn.nyutonika.ru/images/pages-napr/Frame 246.png" alt="">
+                    </div>
 
                 </section>
 
@@ -417,7 +409,7 @@
                         профессиональное мнение наших психологов.
                     </p>
                     <div>
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 247-1.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600"
                             class="uk-scrollspy-inview uk-padding-large">
                     </div>
@@ -447,7 +439,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 243.png" alt="">
                         </div>
                     </div>
 
@@ -456,7 +448,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-padding uk-grid-margin">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 244.png" alt="">
                         </div>
                         <div class="efficiency efficiency-podgotovka uk-first-column">
                             <ul class="efficiency-ul-log">
@@ -483,7 +475,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-flex-last@m uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 245.png" alt="">
                         </div>
                     </div>
 
