литература средняя школа 2

--- a/шаблон — направления-средняя-школа-литература.html
+++ b/шаблон — направления-средняя-школа-литература.html
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 248.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -321,9 +321,9 @@
         </div>
         <div class="container">
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
+            <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-margin-large-top" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 249.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -353,7 +353,7 @@
         <div class="problems problems-srscola diagnostika-srscola angl color16">
             <div class="container">
                 <section class="container-item">
-                    <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
+                    <h4 class="uk-text-center title-trend-block uk-scrollspy-inview uk-margin-large-bottom"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Подготовьтесь на 5+ вместе с
                         Ньютоникой
                     </h4>
@@ -372,7 +372,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 250.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium uk-grid uk-grid-stack"
@@ -380,7 +380,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding uk-first-column uk-grid-margin">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 251.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola uk-first-column">
                             <ul>
@@ -394,10 +394,7 @@
                     </div>
                 </section>
                 <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
-                    <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
-                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                    </div>
+                    
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
                         <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                             <div class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk">
@@ -418,6 +415,10 @@
 
                             </div>
                         </div>
+                    </div>
+                    <div class="uk-width-expand@m uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 252.png" alt=""
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
 
@@ -443,7 +444,7 @@
                         хокку!
                     </p>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 253.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
@@ -456,13 +457,13 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-padding  uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 255.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
                 <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
                     <div class="uk-width-expand@m uk-padding  uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 254.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
@@ -482,7 +483,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-padding  uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 256.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
@@ -531,7 +532,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 257.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
