--- a/шаблон — направления-средняя-школа-история.html
+++ b/шаблон — направления-средняя-школа-история.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 258.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +271,7 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style color9" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-11.svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/история3.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/graph.svg">
@@ -329,7 +329,7 @@
                         </h4>
                         <div class="icons-block  uk-scrollspy-inview uk-flex uk-flex-center"
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 259.png">
                         </div>
                         <h4 class="uk-scrollspy-inview uk-text-center"
                             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
@@ -352,7 +352,7 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-10.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/история2.svg">
                     </div>
                 </section>
                 <section class="uk-padding-large">
@@ -377,7 +377,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 260-1.png">
                     </div>
                 </section>
             </div>
@@ -432,7 +432,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 261.png">
                     </div>
                 </section>
             </div>
@@ -470,7 +470,7 @@
                 <!-- 1 секция  баннер и текст-->
                 <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 264.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -505,7 +505,7 @@
 
                     </div>
                     <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 263.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                     </div>
@@ -518,7 +518,7 @@
                 <!-- 1 секция  баннер и текст-->
                 <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 262.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -563,7 +563,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 265.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium uk-grid uk-grid-stack"
@@ -571,7 +571,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 266.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola uk-first-column">
                             <ul>
