--- a/шаблон — направления-средняя-школа-обществознание.html
+++ b/шаблон — направления-средняя-школа-обществознание.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 267.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +271,7 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style color9" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/история3.svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/флаг-рос.png">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/graph.svg">
@@ -327,7 +327,7 @@
                         </h4>
                         <div class="icons-block  uk-scrollspy-inview uk-flex uk-flex-center"
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 268.png">
                         </div>
                         <h4 class="uk-scrollspy-inview uk-text-center"
                             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
@@ -371,12 +371,7 @@
         <div class="problems color16 uk-margin-bottom uk-margin-large-top">
 
             <div class="container">
-                <section class="nine-section-dop-icons uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                    <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/история2.svg">
-                    </div>
-                </section>
+                
                 <section class="uk-padding-large">
                     <h3 class="uk-text-center   uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
@@ -404,7 +399,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 269.png">
                     </div>
                 </section>
             </div>
